# robot_arm_control

./: .gitignore  CLAUDE.md  README.md  ROS2_MIGRATION_STEPS.md  collision.py  config.yaml  driver.py  kinematics.py  main.py  pyproject.toml  requirements.txt  safety.py
scripts/: auto_calibrate.py  calibrate.py  set_motor_id.py  sweep_test.py  test_collision.py  test_motors.py
